tests/query_errors/aggregate_init_fail/error.txt
Error: 
    4 |             7 + []
      |             ^^^^^^ The binary operation `+` is not defined for the type `integer` and `array`